--- a/AdminPage/AdminMasterPage.master
+++ b/AdminPage/AdminMasterPage.master
@@ -41,7 +41,7 @@
             <div class="menu-action"><i class="fa fa-bars" aria-hidden="true"></i></div>
             <div class="menu-box">
                 <div class="menu-item">
-                    <a href="/Administrator/AHome/Index"><i class="menu-item-icon fa-home fa"></i><span>首页</span></a>
+                    <a href="/AdminPage/index.aspx"><i class="menu-item-icon fa-home fa"></i><span>首页</span></a>
                 </div>
                 <div class="menu-sub" style="height: 0px;"></div>
             </div>
