--- a/css/register.css
+++ b/css/register.css
@@ -10,37 +10,47 @@ body{
     width:100%;
 }
 
-.login-con{
+.register-con{
     background-color:white;
     opacity:0.4;
     height:400px;
     margin-top:150px;
 }
 
-.login-disk{
+.register-disk{
     z-index:100;
     opacity:1; 
     background-color:#EFFAFE;
-    height:400px;
-    width:400px;
-    margin-left:800px;
-    margin-top:-400px;
+    height:470px;
+    width:500px;
+    margin-left:400px;
+    margin-top:-430px;
     position:relative;
 }
 
-.login-title{
+.register-title{
+    width:500px;
     margin:0px auto;
     text-align:center;
 }
 
-.login-table{
+.register-table{
     margin:0px auto;
+    margin-top:-10px;
     background-color:#B0EFFF;
-    height:260px;
-    width:300px;
+    height:360px;
+    width:400px;
     position:absolute;
     left:50px;
     top:70px;
+}
+
+.table-con{
+    margin:0px auto;
+    width:330px;
+    height:350px;
+    border:1px solid;
+    margin-top:5px;
 }
 
 .logname{
@@ -79,7 +89,7 @@ body{
     line-height:30px;
 }
 
-.login-register{
+.register{
     width:250px;
     margin-left:22px;
     margin-top:40px;
