--- a/css/master.css
+++ b/css/master.css
@@ -64,7 +64,7 @@ body{
 .con{
 	top: 60px;
     position: relative;
-    width:1100px;
+    width:1300px;
     margin:0px auto;
 }
 
@@ -80,7 +80,7 @@ p.address{
 	padding:0px;
 	vertical-align: middle;
 	text-align: center;
-	color: #FF9537;
+	color: #767B7F;
     height:30px
 }
 .showtime{
@@ -88,7 +88,7 @@ p.address{
     padding:0px;
     height:20px;
     text-align:center;
-    color:#FF9537;
+    color:#767B7F;
     margin-left:45%;
 }
 
