--- a/AdminPage/AdminMasterPage.master
+++ b/AdminPage/AdminMasterPage.master
@@ -27,7 +27,7 @@
         <span class="line f-left"></span>
         <div class="user-ctn f-left">
             <i class="fa fa-volume-off" aria-hidden="true"></i>
-              --  后台管理
+              --  后台管理12
         </div>
         <div class="f-right">
             <i class="fa fa-sign-in" aria-hidden="true"></i>
