--- a/css/question.css
+++ b/css/question.css
@@ -30,7 +30,7 @@ a{ text-decoration:none; color:#333;  }
 .slideBox .nextStop{ display:none;  }
 
 .con{
-    height:3570px;
+    height:900px;
     width:1350px;
     margin:0px;
     padding:0px;
@@ -44,7 +44,7 @@ a{ text-decoration:none; color:#333;  }
 }
 .contain{
     width:1335px;
-    height:3100px;
+    height:650px;
     margin-top:0px;
     margin-left:35px;
     margin-right:0px;
@@ -66,10 +66,14 @@ a{ text-decoration:none; color:#333;  }
     padding-left:20px;
     background-color:#4C80BA;
     color:white;
+    display:inline-block;
+    width:1250px;
+    height:40px;
+    line-height:40px;
 }
 
 .question-title{
-    margin:0px auto;
+    margin-left:20px;
     display:inline-block;
     font-size:xx-large;
     height:30px;
@@ -79,15 +83,21 @@ a{ text-decoration:none; color:#333;  }
 }
 .question-con
 {
-   display:inline-block;
-   margin:0px;
+   margin-left:20px;
+   margin-top:10px;
    padding:5px auto auto 20px;
-   height:90px;
+}
+
+.answer-con
+{
+   margin-left:20px;
+   margin-top:10px;
+   padding:5px auto auto 20px;
 }
 
 .date{
     display:inline-block;
-    margin:0;
+    margin:15px auto auto 20px;
     padding-right:10px;
     height:10px;
     font-size:10px;
@@ -102,4 +112,15 @@ a{ text-decoration:none; color:#333;  }
 }
 .answerlist{
     overflow:hidden;
+}
+
+.answer{
+    width:1250px;
+    background-color:#E0E8F1;
+}
+
+.goQues{
+    float:right;
+    margin-right:20px;
+    margin-top:-25px;
 }
