聊天室开始

--- a/MasterPage.master
+++ b/MasterPage.master
@@ -24,7 +24,7 @@
 					    <li><a href="news.aspx">资讯</a></li>
                         <li><a href="products.aspx">产品</a></li>
 					    <li><a href="Question.aspx" >问答</a></li>
-					    <li><a href="#">聚吧</a></li>
+					    <li><a href="Chatting.aspx">聚吧</a></li>
 					    <li><a href="#">旅途</a></li>
 				    </ul>
                 
