--- a/css/goAnswer.css
+++ b/css/goAnswer.css
@@ -2,6 +2,7 @@
     width:1350px;
     margin-left:0px;
     padding:0px;
+    height:243px;
 }
 
 .contain{
@@ -67,4 +68,8 @@
     font-size:14px;
     line-height:14px;
     color:#2A94CB;
+}
+
+.btn{
+    margin-top:-10px;
 }
