--- a/css/mytrip.css
+++ b/css/mytrip.css
@@ -36,4 +36,14 @@
     font-size:xx-large;
     height:80px;
     background-color:black;
+    line-height:80px;
+    color:white;
+}
+.space{
+     text-align:center;
+    font-size:xx-large;
+    height:80px;
+    background-color:black;
+    line-height:80px;
+    color:white;
 }
