--- a/css/master.css
+++ b/css/master.css
@@ -30,7 +30,7 @@ body{
 .nav-con ul{
 	margin:0 auto;
 	height: 55px;
-	width: 800px;
+	width: 900px;
 	float:left;
 }
 
@@ -39,7 +39,7 @@ body{
 .nav-con li{
 	list-style: none;
 	float:left;
-	width: 130px;
+	width: 105px;
 	text-align: center;
 }
 
@@ -71,7 +71,7 @@ body{
 .foot{
 	background-color: #4C474E;
 	height: 50px;
-    width:1440px;
+    width:100%;
 	position: relative;
 	bottom: -100px;
     z-index:2;
@@ -96,7 +96,7 @@ p.address{
 
 span.login{
     margin-top:0px;
-    margin-left:100px;
+    margin-left:40px;
     float:left;
     height:55px;
     line-height:55px;
@@ -105,3 +105,6 @@ span.login{
 .loginbtn{
     background-image:url("image/loginbtnbg.png";
 }
+
+;
+;
