--- a/Admin_Master.master
+++ b/Admin_Master.master
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
     <link href="css/admin_master.css" rel="stylesheet" />
+    <link rel="icon" href="image/kylin.ico" />
     <asp:ContentPlaceHolder id="head" runat="server">
 
     </asp:ContentPlaceHolder>
