--- a/MasterPage.master
+++ b/MasterPage.master
@@ -8,6 +8,7 @@
     
          <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
          <link href="css/master.css" rel="stylesheet" />
+        <link rel="icon" href="image/kylin.ico" />
          <title></title>
          <asp:ContentPlaceHolder id="head" runat="server">
          </asp:ContentPlaceHolder>
